k8s/authenticator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: authenticator-server
  template:
    metadata:
      labels:
        component: authenticator-server
    spec:
      containers:
        - name: authenticator
          image: d0rka/users-authenticator
          ports:
            - containerPort: 5000
