k8s/authenticator-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticator-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: authenticator-server
  ports:
    - port: 5000
      targetPort: 5000
