k8s/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: frontend
          image: d0rka/users-frontend
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-cis
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3001
      targetPort: 3001
