k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-service-frontend-cluster-ip-service
                port:
                  number: 3001

          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: authentication-service-backend-proxy-cluster-ip-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-module-federation
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /main_app_mf(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-cis
                port:
                  number: 3001
